--- a/app/src/main/res/layout/fragment_data_collection.xml
+++ b/app/src/main/res/layout/fragment_data_collection.xml
@@ -10,34 +10,44 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/textview_fillout" />
+        android:text="@string/textview_fillout"
+        android:textSize="25dp"/>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout_firstName"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editText_firstName"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout_firstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/textview_enter_text_here"
-            android:inputType="textNoSuggestions|textCapWords"
-            android:paddingTop="16dp" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_weight="1">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout_lastName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/editText_firstName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/first_name"
+                android:inputType="textNoSuggestions|textCapWords"
+                android:paddingTop="16dp" />
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/editText_lastName"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout_lastName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/textview_enter_text_here"
-            android:inputType="textNoSuggestions|textCapWords"
-            android:paddingTop="16dp" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/editText_lastName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/last_name"
+                android:inputType="textNoSuggestions|textCapWords"
+                android:paddingTop="16dp" />
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
