--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorYellow">#FFEB3B</color>
+    <color name="colorOrange">#F57C00</color>
+    <color name="colorGreen">#8BC34A</color>
+    <color name="colorRed">#D32F2F</color>
+    <color name="colorWhite">#F5F5F5</color>
+    <color name="colorGrey">#B6B6B6</color>
 </resources>
