--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -14,6 +14,12 @@
         android:text="@string/basic_activity"/>
 
     <Button
+        android:id="@+id/fragment_data_example"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_data_movement"/>
+
+    <Button
         android:id="@+id/recycler_view_example"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
