--- a/app/src/main/res/layout/activity_fragment_example.xml
+++ b/app/src/main/res/layout/activity_fragment_example.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.valdeslab.learningapp.FragmentExampleActivity">
+    tools:context="com.example.valdeslab.learningapp.DataMovement.FragmentExampleActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"/>
 
     <fragment
-        class="com.example.valdeslab.learningapp.LastNameFragment"
+        class="com.example.valdeslab.learningapp.DataMovement.LastNameFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 -->
