--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.valdeslab.learningapp.RecyclerViewActivity">
+    tools:context="com.example.valdeslab.learningapp.RecyclerView.RecyclerViewActivity">
 
     <FrameLayout
         android:id="@+id/container_recycler_view_activity"
