--- a/app/src/main/res/layout/fragment_data_collection.xml
+++ b/app/src/main/res/layout/fragment_data_collection.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.valdeslab.learningapp.DataCollectionFragment">
+    tools:context="com.example.valdeslab.learningapp.DataMovement.DataCollectionFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
