--- a/app/src/main/res/layout/fragment_first_name.xml
+++ b/app/src/main/res/layout/fragment_first_name.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.valdeslab.learningapp.FirstNameFragment">
+    tools:context="com.example.valdeslab.learningapp.DataMovement.FirstNameFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
