Added ChartActivity and PieChartFrag for displaying a pie chart. Added necessary rec files.

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -25,4 +25,10 @@
         android:layout_height="wrap_content"
         android:text="@string/recycler_view"/>
 
+    <Button
+        android:id="@+id/data_chart_example"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/data_charts"/>
+
 </LinearLayout>
