Added landscape xml for NavigationActivity. Comments to chart fragments. Moved all chart files to Charts folder.

--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.valdeslab.learningapp.ChartActivity">
+    tools:context="com.example.valdeslab.learningapp.Charts.ChartActivity">
 
     <FrameLayout
         android:id="@+id/chart_activity_fragment_container"
