Added setup for network test

--- a/app/src/main/res/layout-land/activity_navigation.xml
+++ b/app/src/main/res/layout-land/activity_navigation.xml
@@ -23,6 +23,12 @@
             android:layout_height="wrap_content"
             android:text="@string/fragment_data_movement"/>
 
+        <Button
+            android:id="@+id/network_example"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/network_test"/>
+
 
 
     </LinearLayout>
