--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -31,4 +31,10 @@
         android:layout_height="wrap_content"
         android:text="@string/data_charts"/>
 
+    <Button
+        android:id="@+id/network_example"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/network_test"/>
+
 </LinearLayout>
