--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -37,4 +37,10 @@
         android:layout_height="wrap_content"
         android:text="@string/network_test"/>
 
+    <Button
+        android:id="@+id/kiosk_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/kiosk_button"/>
+
 </LinearLayout>
