--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -4,21 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:gravity="center"
     tools:context="com.example.valdeslab.learningapp.Kiosk.NavBarFragment">
 
     <TextView
+        android:id="@+id/nav_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="30sp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/back" />
 
     <TextView
+        android:id="@+id/nav_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="30sp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/submit" />
 
     <TextView
+        android:id="@+id/nav_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="30sp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/next" />
 
 </LinearLayout>
