--- a/app/src/main/res/layout/fragment_ssx.xml
+++ b/app/src/main/res/layout/fragment_ssx.xml
@@ -21,6 +21,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -43,6 +44,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -65,6 +67,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -87,6 +90,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -109,6 +113,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -131,6 +136,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -153,6 +159,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -175,6 +182,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -206,6 +214,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -228,6 +237,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -250,6 +260,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -272,6 +283,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -294,6 +306,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -316,6 +329,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -338,6 +352,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
@@ -360,6 +375,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssx_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="test"/>
