--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -43,4 +43,11 @@
         android:layout_height="wrap_content"
         android:text="@string/kiosk_button"/>
 
+    <Button
+        android:id="@+id/bluetooth_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/bluetooth_button"/>
+
+
 </LinearLayout>
