Added setup for google charts

--- a/app/src/main/res/layout-land/activity_navigation.xml
+++ b/app/src/main/res/layout-land/activity_navigation.xml
@@ -61,6 +61,12 @@
             android:layout_height="wrap_content"
             android:text="@string/kiosk_button"/>
 
+        <Button
+            android:id="@+id/google_chart_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/google_chart_button"/>
+
     </LinearLayout>
 
 </LinearLayout>
