--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -49,5 +49,11 @@
         android:layout_height="wrap_content"
         android:text="@string/bluetooth_button"/>
 
+    <Button
+        android:id="@+id/google_chart_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/google_chart_button"/>
+
 
 </LinearLayout>
