Got line chart working

--- a/app/src/main/res/layout/activity_chart_two.xml
+++ b/app/src/main/res/layout/activity_chart_two.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.valdeslab.learningapp.Charts.ChartActivity">
+    tools:context="com.example.valdeslab.learningapp.Charts.ChartTwoActivity">
 
     <FrameLayout
-        android:id="@+id/chart_activity_fragment_container"
+        android:id="@+id/chart_two_activity_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/chart_activity_fragment_container_two"
+        android:id="@+id/chart_two_activity_fragment_container_two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
